--- a/site/boatswain_whistle.html
+++ b/site/boatswain_whistle.html
@@ -23,6 +23,8 @@
         <nav>
         <ul>
             <li><a href="https://archive.org/details/bluejacketsmanua00mcle/page/772/mode/2up" target="_blank">Blue Jackets Manual, 1940</a></li>
+            <li><a href="https://www.youtube.com/watch?v=Tn8gASbAxkA" target="_blank">Sounds of the Bosun's Call</a></li>
+            <li><a href="../media/docs/Pipegeneralcall.ogg" target="_blank">General Call Soundbyte</a></li>
         </ul>
     </nav>
     <img src='../media/content/bs_01.jpg' alt=''>
@@ -36,8 +38,11 @@
     <p class='noprint'>The thumb ought to be near the shackle, while the side of the buoy ought to lie against the palm of the hand with the last 3 fingers folded over the gun and buoy hole in a way that allows them to precisely control how the air comes out of the buoy.<br>Do not touch the edge of the hole in the buoy, or the one at the end of the gun(pee), as this will choke the sound.</p>
     <img src='../media/content/bs_06.jpg' alt='A hand showing how to make a low note which consists of holding a boatswains whistle, with the index finger folded over the body of the whistle and the thumb resting under the keel, the last 3 fingers are raised. Under it is another hand holding a boatswains whistle to make a high note, which consists of all 4 fingers wrapped around the body of the whistle with the thumb resting on the back of the keel.'>
     <p class='noprint'>There are 2 main notes:<br>Low Note: Produced by blowing steadily into the mouth piece while not blocking the buoy hole with the fingers.<br>High note: produced by controlling the air coming out of the buoy hole by closing fingers around the buoy.</p>
-    <img src='../media/content/bs_07.jpg' alt='Each tone is personified by a bird, with the mouth positioned in a way that makes it seem like they are wording out the sounds of the flute.'>
-    <p class='noprint'>And there are 3 tones:<br>Trill (rattled tone): Place tongue at the front of the mouth with the end curled behind the teeth, then roll your R's.<br>Warble (undulating note): Similar to a trill, but not as fast. Wiggle tongue up and down and side to side in your mouth while blowing.<br>Smooth (plain note): Produced the same way as when blowing in an ordinary whistle, with notes that are raised or lowered by blowing harder or lighter.</p>
+    <div id='wrap'>
+        <img src='../media/content/bs_07.jpg' alt='Each tone is personified by a bird, with the mouth positioned in a way that makes it seem like they are wording out the sounds of the flute.'>
+        <a style='width: 13%;height: 12%;top: 4%;left: 62%;' href="https://www.youtube.com/watch?v=Tn8gASbAxkA" target="_blank"><span>Listen to the 2 notes and 3 tones</span></a>
+        <p class='noprint'>And there are 3 tones:<br>Trill (rattled tone): Place tongue at the front of the mouth with the end curled behind the teeth, then roll your R's.<br>Warble (undulating note): Similar to a trill, but not as fast. Wiggle tongue up and down and side to side in your mouth while blowing.<br>Smooth (plain note): Produced the same way as when blowing in an ordinary whistle, with notes that are raised or lowered by blowing harder or lighter.</p>
+    </div>
     <img src='../media/content/bs_08.jpg' alt='a humanoid bird in a white uniform is happily blowing a boatswains whistle'>
     <p class='noprint'>To learn how to pipe well, practice the aforementionned basic sounds, adopt a good posture, breathe well, and pay attention to timing.</p>
     <img src='../media/content/bs_09.jpg' alt='there are 4 hand positions shown holding a boatswains whistle. Open, curved, closed and clinched.'>
@@ -64,8 +69,11 @@
     <img src='../media/content/bs_17.jpg' alt='A score that separates the notes as high and low, with seconds 1-10 on the top bar. A squiggly line runs along the score, starting from low and then shooting up gradually to high and then down again, with this pattern repeated many more times.'>
     <p class='noprint'>Alternate Way of Displaying Call Scores:<br>Warble<br>Trill<br>Score for Veer, Walk Back or Ease.<br>The degree of slopes indicates the speed of ascent and descent of the notes.</p>
     <h2>General Call</h2>
-    <img src='../media/content/bs_18.jpg' alt='a score showing how to play the call General Call. The notes on the score start from low and shoots up to high in a smooth line with a sharp finish, then back to low and rapidly up to high for 3 seconds on a all-smooth line before dropping quickly to low.'>
-    <p class='noprint'>The general call often preceeds other calls, to draw attention to the coming announcement (requires verbal addition).</p>
+    <div id='wrap'>
+        <img src='../media/content/bs_18.jpg' alt='a score showing how to play the call General Call. The notes on the score start from low and shoots up to high in a smooth line with a sharp finish, then back to low and rapidly up to high for 3 seconds on a all-smooth line before dropping quickly to low.'>
+        <a style='width: 13%;height: 20%;top: 20%;left: 53%;' href="../media/docs/Pipegeneralcall.ogg"><span>General Call Soundbyte</span></a>
+        <p class='noprint'>The general call often preceeds other calls, to draw attention to the coming announcement (requires verbal addition).</p>
+    </div>
     <div id='wrap'>
         <img src='../media/content/bs_19.jpg' alt='a score showing how to play the call Dinner or Supper. The notes on the score start at low, then ease up to high for 4 seconds, then back slowly down to low with a break. Then it shoots up from low to high rapidly, then back down lasting 5 seconds, after which there are 2 peeps before a smooth line rises from low to high very rapidly before dropping to low just as fast, then rising between high and low with a 3 second warble before dropping to low with a break. Finally, it starts from high for 2 short peeps, before making a trill from high to low and then halfway up to high before stopping.'>
         <a style='width: 28%;height: 14%;top: 77%;left: 35%;' href="https://archive.org/details/bluejacketsmanua00mcle/page/772/mode/2up"><span>Blue Jackets Manual, 1940</span></a>
