--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
 <header>
     <nav>
     <ul>
+      <li><a href="boatswain_whistle.html">Boatswain's Call</a></li>
+      <li><a href="day_shapes.html">Day Shapes</a></li>
+      <li><a href="emergency_bag.html">Emergency Bag</a></li>
+      <li><a href="first_aid_kit.html">First-Aid Kit</a></li>
+      <li><a href="flags.html">Flag Semaphore</a></li>
+      <li><a href="aircraft.html">Ground to Air Signals</a></li>
       <li><a href="flags_maritime.html">International Maritime Signal Flags</a></li>
-      <li><a href="emergency_bag.html" target="_blank">Emergency Bag</a></li>
+      <li><a href="morse_code.html">Morse Code</a></li>
+      <li><a href="morse_flags.html">Morse Code With Flags</a></li>
+      <li><a href="triangular_bandage.html">Triangular Bandage</a></li>
     </ul>
   </nav>
 </header>
@@ -29,7 +37,18 @@
     <a style='width: 6%;height: 20%;top: 28%;left: 19%;' title='Link to a page about signaling with flags' href="site/flags_maritime.html"><span>International Maritime Signal Flags</span></a>
     <a style='width: 7%;height: 13%;top: 66%;left: 50%;' title='Link to a page about emergency bags' href="site/emergency_bag.html"><span>Emergency Bag</span></a>
   </div>
-  <img src='media/interface/title.png' width='50%' alt='Rabbit Waves'>
+  <img src='media/interface/title.png' class='maintitle' alt='Rabbit Waves'>
+  <img src='media/interface/pages.jpg' alt='Pages:' class='title'>
+  <a href="site/boatswain_call.html"><img src='media/interface/boatswain_call.jpg' title='Boatswains Call'></a>
+  <a href="site/day_shapes.html"><img src='media/interface/day_shapes.jpg' title='Day shapes'></a>
+  <a href="site/emergency_bag.html"><img src='media/interface/emergency_bag.jpg' title='Emergency Bag'></a>
+  <a href="site/first_aid_kit.html"><img src='media/interface/first_aid.jpg' title='First aid'></a>
+  <a href="site/aircraft.html"><img src='media/interface/aircraft.jpg' title='ground to air signals'></a>
+  <a href="site/flags.html"><img src='media/interface/hand_flag_semaphore.jpg' title='Hand flag semaphore'></a>
+  <a href="site/morse.html"><img src='media/interface/morse_code.jpg' title='Morse Code'></a>
+  <a href="site/morse_flags.html"><img src='media/interface/morse_flags.jpg' title='Morse Code with flags'></a>
+  <a href="site/flags_maritime.html"><img src='media/interface/international_maritime_signal_flags.jpg' title='International Maritime Signal Flags'></a>
+  <a href="site/triangular_bandage.html"><img src='media/interface/triangular_bandage.jpg' title='Triangular Bandage'></a>
 </main>
 <footer>
     <div id='wrapfooter'>
