--- a/site/about.html
+++ b/site/about.html
@@ -31,9 +31,20 @@
 			<li><a href="https://liberapay.com/hundredrabbits/donate" target="_blank">Liberapay Support</a></li>
 		</ul>
 	</nav>
+	<h2>Support</h2>
+	<img src='../media/interface/support.jpg' alt='Support:' class='title'>
+	<div id='wrapsupport'>
+		<img src='../media/interface/support_options.jpg' loading='lazy' title='Support options:'>
+		<a class='stripe' href="https://buy.stripe.com/eVa2br27kdpB17adQT" title='Donate via Stripe' target="_blank"></a>
+		<a class='paypal' href="https://paypal.me/hundredrabbits" title='Donate via Paypal' target="_blank"></a>
+		<a class='itchio' href="https://hundredrabbits.itch.io" title='Buy a book, game or tool from our itch.io store' target="_blank"></a>
+		<a class='patreon' href="https://patreon.com/hundredrabbits" title='Support us on Patreon' target="_blank"></a>
+		<a class='liberapay' href="https://liberapay.com/hundredrabbits/donate" title='Support us on Liberapay' target="_blank"></a>
+	</div>
 	<h2>Pages</h2>
 	<nav>
 		<ul>
+			<li><a href="boatswain_call.html">Boatswain's Call</a></li>
 			<li><a href="day_shapes.html">Day Shapes</a></li>
 			<li><a href="emergency_bag.html">Emergency Bag</a></li>
 			<li><a href="first_aid_kit.html">First-Aid Kit</a></li>
@@ -46,6 +57,7 @@
 		</ul>
 	</nav>
 	<img src='../media/interface/pages.jpg' alt='Pages:' class='title'>
+	<a href="boatswain_whistle.html"><img src='../media/interface/boatswain_call.jpg' title='Boatswains Call'></a>
 	<a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' title='Day shapes'></a>
 	<a href="emergency_bag.html"><img src='../media/interface/emergency_bag.jpg' title='Emergency Bag'></a>
 	<a href="first_aid_kit.html"><img src='../media/interface/first_aid.jpg' title='First aid'></a>
@@ -55,15 +67,6 @@
 	<a href="morse_flags.html"><img src='../media/interface/morse_flags.jpg' title='Morse Code with flags'></a>
 	<a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' title='International Maritime Signal Flags'></a>
 	<a href="triangular_bandage.html"><img src='../media/interface/triangular_bandage.jpg' title='Triangular Bandage'></a>
-	<img src='../media/interface/support.jpg' alt='Support:' class='title'>
-	<div id='wrapsupport'>
-		<img src='../media/interface/support_options.jpg' loading='lazy' title='Support options:'>
-		<a class='stripe' href="https://buy.stripe.com/eVa2br27kdpB17adQT" title='Donate via Stripe' target="_blank"></a>
-		<a class='paypal' href="https://paypal.me/hundredrabbits" title='Donate via Paypal' target="_blank"></a>
-		<a class='itchio' href="https://hundredrabbits.itch.io" title='Buy a book, game or tool from our itch.io store' target="_blank"></a>
-		<a class='patreon' href="https://patreon.com/hundredrabbits" title='Support us on Patreon' target="_blank"></a>
-		<a class='liberapay' href="https://liberapay.com/hundredrabbits/donate" title='Support us on Liberapay' target="_blank"></a>
-	</div>
 </main>
 <footer>
     <div id='wrapfooter'>
