--- a/site/emergency_bag.html
+++ b/site/emergency_bag.html
@@ -22,14 +22,14 @@
 <main>
       <nav>
         <ul>
-            <li><a href="https://100r.co/site/ditch_bag.html" target="_blank">Abandon Ship Bag</a></li>
+            <li><a href="https://100r.ca/site/ditch_bag.html" target="_blank">Abandon Ship Bag</a></li>
             <li><a href="https://archive.org/details/disaster-preparedness-tokyo/" target="_blank">Bosai Tokyo</a></li>
             <li><a href="../site/first_aid_kit.html" target="_blank">First-Aid Kit</a></li>
         </ul>
     </nav>
     <div id='wrap'>
         <img src='../media/content/emergency_bag_02.jpg' loading ='lazy'>
-        <a style='width: 30%;height: 10%;top: 1%;left: 43%;' href="https://100r.co/site/ditch_bag.html" target="_blank"><span>Abandon Ship Bag</span></a>
+        <a style='width: 30%;height: 10%;top: 1%;left: 43%;' href="https://100r.ca/site/ditch_bag.html" target="_blank"><span>Abandon Ship Bag</span></a>
     </div>
         <p class='noprint'>An emergency bag, or abandon ship bag, contains emergency supplies for when it is necessary to leave the home/vessel in a hurry in the event of a disaster.<br>The bag ought to contain the minimum essentials. What is essential varies per person, and so it is important to pack what you need yourself, considering each item carefully, instead of following a list.</p>
         <img src='../media/content/emergency_bag_05.jpg' alt='a puffin with a duffel bag talking with a rabbit carrying a hiking backpack. The puffin is talking about a sailboat, the rabbit about a house on land' loading ='lazy'>
@@ -52,7 +52,7 @@
 <footer>
     <div id='wrapfooter'>
       <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2025 BY-NC-SA 4.0'>
-      <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
+      <a class='hundredrabbits' href="https://100r.ca" title='Link to 100r.ca website' target="_blank"></a>
       <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank"></a>
       <a class='about' href="about.html" title='Link to about page'></a>
     </div>
