--- a/site/triangular_bandage.html
+++ b/site/triangular_bandage.html
@@ -45,7 +45,7 @@
 <footer>
     <div id='wrapfooter'>
       <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2025 BY-NC-SA 4.0'>
-      <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
+      <a class='hundredrabbits' href="https://100r.ca" title='Link to 100r.ca website' target="_blank"></a>
       <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank"></a>
       <a class='about' href="about.html" title='Link to about page'></a>
     </div>
