--- a/site/about.html
+++ b/site/about.html
@@ -57,7 +57,7 @@
 		</ul>
 	</nav>
 	<img src='../media/interface/pages.jpg' alt='Pages:' class='title'>
-	<a href="boatswain_whistle.html"><img src='../media/interface/boatswain_call.jpg' title='Boatswains Call'></a>
+	<a href="boatswain_call.html"><img src='../media/interface/boatswain_call.jpg' title='Boatswains Call'></a>
 	<a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' title='Day shapes'></a>
 	<a href="emergency_bag.html"><img src='../media/interface/emergency_bag.jpg' title='Emergency Bag'></a>
 	<a href="first_aid_kit.html"><img src='../media/interface/first_aid.jpg' title='First aid'></a>
@@ -71,7 +71,7 @@
 <footer>
     <div id='wrapfooter'>
         <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2024 BY-NC-SA 4.0'>
-        <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
+        <a class='hundredrabbits' href="https://100r.ca" title='Link to 100r.ca website' target="_blank"></a>
         <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank"></a>
         <a class='about' href="about.html" title='Link to about page'></a>
     </div>
