--- a/site/celestial_navigation.html
+++ b/site/celestial_navigation.html
@@ -41,6 +41,14 @@
     <p class='noprint'>In the southern hemisphere sailors look to the southern cross(crux) to find the north.<br>Unlike Polaris, it isn't as near to the pole, but it is a useful marker to help locate it. It is visible any time of the year, even near the horizon near the tropical portion of the northern hemisphere.<br>Drawing a line from the star gacrux to acrux, about 4 1/2 times the length of that same line, leads to a point near the horizon near the southern celestial pole (south).<br>It is possible to use the southern pointers(alpha and beta centauri) to help find that point.</p>
     <img src='../media/content/cn_10.jpg' alt='a graphic showing polaris in relation to the big dipper, the little dipper and Cassiopeia.'>
     <p class='noprint'>If the star(or constellation) you are looking for is covered by clouds, knowing the positions of other celestial bodies will help fill in the blanks.</p>
+    <img src='../media/content/cn_11.jpg' alt=''>
+    <p class='noprint'></p>
+    <img src='../media/content/cn_12.jpg' alt=''>
+    <p class='noprint'></p>
+    <img src='../media/content/cn_13.jpg' alt=''>
+    <p class='noprint'></p>
+    <img src='../media/content/cn_14.jpg' alt=''>
+    <p class='noprint'></p>
 </main>
 <footer>
     <div id='wrapfooter'>
