--- a/site/celestial_navigation.html
+++ b/site/celestial_navigation.html
@@ -42,12 +42,13 @@
     <img src='../media/content/cn_10.jpg' alt='a graphic showing polaris in relation to the big dipper, the little dipper and Cassiopeia.'>
     <p class='noprint'>If the star(or constellation) you are looking for is covered by clouds, knowing the positions of other celestial bodies will help fill in the blanks.</p>
     <img src='../media/content/cn_11.jpg' alt=''>
-    <p class='noprint'></p>
-    <img src='../media/content/cn_12.jpg' alt=''>
-    <p class='noprint'></p>
+    <p class='noprint'>There are many more groups of stars in the sky, useful for navigation, with most arranged in ptterns recognizable by the human eye(asterisms). The sky was divided into 88 constellations, and some asterisms are made up of stars from more than one constellation.</p>
+    <h2>The Summer Triangle</h2>
+    <img src='../media/content/cn_12.jpg' alt='A graphic shows the positions of Deneb, Vega and Altair, forming the summer triangle.'>
+    <p class='noprint'>The summer triangle is a noticeable pattern of starsm, made up of 3 stars: Deneb, Vega and Altair. It spans 3 constellations: Aquila, Cygnus and Lyra.</p>
     <img src='../media/content/cn_13.jpg' alt=''>
-    <p class='noprint'></p>
-    <img src='../media/content/cn_14.jpg' alt=''>
+    <p class='noprint'>In the northern hemisphere it is visible for most of the year but it is particularly evident in the summer, where it sits overhead around midnight.<br>In the spring it sits in the east early in the morning, and lies west in fall evenings.<br>In the southern hemisphere, it is visible near the horizon in the north during winter, where it appears inverted.<br>Other asterisms include: The spring triangle, the winter hexagon and the northern cross.</p>
+    <img src='../media/content/cn_14.jpg' alt='an illustration featuring a gull and a rabbit, sitting on crates and talking while drinking something warm. The rabbit says that the brightest star in the sky is Sirius. The gull replies with See-ree-us? On the side are drawings of the two stars, sirus(1st!) and canopus(2nd!)'>
     <p class='noprint'></p>
 </main>
 <footer>
