--- a/site/about.html
+++ b/site/about.html
@@ -45,6 +45,7 @@
 	<nav>
 		<ul>
 			<li><a href="boatswain_call.html">Boatswain's Call</a></li>
+			<li><a href="celestial_compass.html">Celestial Compass</a></li>
 			<li><a href="day_shapes.html">Day Shapes</a></li>
 			<li><a href="emergency_bag.html">Emergency Bag</a></li>
 			<li><a href="first_aid_kit.html">First-Aid Kit</a></li>
@@ -58,6 +59,7 @@
 	</nav>
 	<img src='../media/interface/pages.jpg' alt='Pages:' class='title'>
 	<a href="boatswain_call.html"><img src='../media/interface/boatswain_call.jpg' title='Boatswains Call'></a>
+	<a href="celestial_compass.html"><img src='../media/interface/celestial_compass.jpg' title='Celestial Compass'></a>
 	<a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' title='Day shapes'></a>
 	<a href="emergency_bag.html"><img src='../media/interface/emergency_bag.jpg' title='Emergency Bag'></a>
 	<a href="first_aid_kit.html"><img src='../media/interface/first_aid.jpg' title='First aid'></a>
