--- a/site/celestial_compass.html
+++ b/site/celestial_compass.html
@@ -20,23 +20,34 @@
     <h1>Celestial Navigation</h1>
 </header>
 <main>
+    <nav>
+        <ul>
+            <li><a href="https://en.wikipedia.org/wiki/Spring_Triangle" target="_blank">The Spring Triangle</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Winter_Hexagon" target="_blank">The Winter Hexagon</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Northern_Cross_(asterism)" target="_blank">The Northern Cross</a></li>
+        </ul>
+    </nav>
     <img src='../media/content/cn_polarisnav.jpg' alt='a rabbit standing atop a turnip shaped sailboat, a book in hand, looking at the stars overhead'>
     <img src='../media/content/cn_01.jpg' alt='a star compass showing where all of the stars rise and set, including the sun.'>
     <p class='noprint'>By memorizing the rising and setting positions of many stars sailors can find out where they are in the world.<br>They act as a compass.<br>List of stars and their constellations: Caph II (Cassiopeia), Merak (Ursa Major), Capella (Auriga), Deneb (Cygnus), Vega (Lyra), Castor (Gemini), Polluz (Gemini), Alcyone (Taurus), Arcturus (Bootes), Alderbaran (Taurus), Regulus (Lego), Altair (Aquila), Betelgeuse (Orion), Procyon (Canis Minor), Mintaka (Orion), Rigel (Orion), Spica (Virgo), Sirius (Canis Major), Minkar (Corvus), Formalhaul (Piscis Austrinus), Shaula (Scorpio), Canopus (Capina), Becrux (Southern Cross), and Acrux (Southern Cross).</p>
+    <h2>Finding Polaris Without a Compass</h2>
     <img src='../media/content/cn_02.jpg'>
     <p class='noprint'>For those in the northern hemisphere, the most important star is Polaris(North Star). It burns bright in the sky and sits directly in the north (within 1 degree of the celestial north pole).<br>If you can find Polaris in the sky, then you know where north is. Polaris stays where it is while the rest of the stars move overhead. If you look north following a compass you'll find Polaris.<br>How do you find Polaris without a compass?<br>1. Find the Big Dipper (part of Ursa Major) 2. Use the Big Dipper's pointer stars to find the Little Dipper (part of Ursa Minor). 3. Polaris sits on the tail end of the Little Dipper.</p>
     <img src='../media/content/cn_03.jpg' alt='A graphic showing the little dipper, with Polaris at the end of the laddle, with a line leading straight towards the big dipper and its two pointer stars, dubhe and merak.'>
     <p class='noprint'>Finding the Big Dipper first is easier because it is bright and big. The Little Dipper is somewhat dim and more difficult to locate.<br>Polaris is part of a group of stars named The Little Dipper, shaped like a bent laddle.<br>If you follow Merak and Dubhe, the 2 stars making up the farthest edge of the Big Dipper's bowl in a straight line, you'll find the Little Dipper.</p>
     <img src='../media/content/cn_04.jpg' alt='A graphic shows the position of the big dipper in relation to polaris throughout the seasons.'>
     <p class='noprint'>The Big Dipper's position in the sky varies throughout the seasons.</p>
+    <h2>Cassiopeia</h2>
     <img src='../media/content/cn_08.jpg' alt='a graphic showing Cassiopeias main stars, Seign, Ruchbach, Gamma Cassiopeia, Caph and Schedar.'>
     <p class='noprint'>Cassiopeia, shaped like a squished W, is a neighboring constellation which can further help ensure that you have correctly identified Polaris.</p>
     <img src='../media/content/cn_09.jpg' alt='A graphic showing the position of Cassiopeia in relation to polaris throughout the seasons.'>
     <p class='noprint'>Cassiopeia appears as a right side up W when below Polaris on northern spring and summer nights, but in the winter, and when observed from southern latitudes, it is above Polaris and appears as an inverted W.</p>
+    <h2>Orion</h2>
     <img src='../media/content/cn_06.jpg' alt='A graphic showing orion and its hourglass shape created by its 7 brightest stars, Betelgeuse, Bellatrix, Saiph, Rigel, Alnitak, Mintaka and Alnilam.'>
     <p class='noprint'>Orion's 7 brightest stars form an hourglass in the sky. The ones that stand out the most are Rigel and Betelgeuse.<br>Orion sits near the celestial equator, in the northern hemisphere it is located in the southerwestern sky, and in the northwestern sky if in the southern hemisphere.<br>Near the equator, Orion appear around midnight(dec-feb). It is most useful there for navigation to find west and east.</p>
     <img src='../media/content/cn_07.jpg' alt='a graphic showing the constellation Orion, with some lines connecting different stars to help find neighboring stars, like Castor and Pollux, Procyon, Sirius, and Alderbaran.'>
     <p class='noprint'>Aligning some of Orion's stars will help find neighboring stars in the sky. In the northern hemisphere, Orion is most visible during the winter(jan-apr), which means it is most visible in the southern hemisphere summer.<br>In the north hemisohere summer (and south hemisphere winter), Orion is out in the day time, therefore not useful for navigation. Although, in Antarctica Orion is visible at twilight for a few hours near local noon, appearing low near the horizon in the north sky.</p>
+    <h2>The Southern Cross</h2>
     <img src='../media/content/cn_05.jpg' alt='A graphic showing the southern cross, with the two southern pointers, with lines showing how to find the celestial south pole.'>
     <p class='noprint'>In the southern hemisphere sailors look to the southern cross(crux) to find the north.<br>Unlike Polaris, it isn't as near to the pole, but it is a useful marker to help locate it. It is visible any time of the year, even near the horizon near the tropical portion of the northern hemisphere.<br>Drawing a line from the star gacrux to acrux, about 4 1/2 times the length of that same line, leads to a point near the horizon near the southern celestial pole (south).<br>It is possible to use the southern pointers(alpha and beta centauri) to help find that point.</p>
     <img src='../media/content/cn_10.jpg' alt='a graphic showing polaris in relation to the big dipper, the little dipper and Cassiopeia.'>
@@ -46,8 +57,13 @@
     <h2>The Summer Triangle</h2>
     <img src='../media/content/cn_12.jpg' alt='A graphic shows the positions of Deneb, Vega and Altair, forming the summer triangle.'>
     <p class='noprint'>The summer triangle is a noticeable pattern of starsm, made up of 3 stars: Deneb, Vega and Altair. It spans 3 constellations: Aquila, Cygnus and Lyra.</p>
-    <img src='../media/content/cn_13.jpg' alt=''>
-    <p class='noprint'>In the northern hemisphere it is visible for most of the year but it is particularly evident in the summer, where it sits overhead around midnight.<br>In the spring it sits in the east early in the morning, and lies west in fall evenings.<br>In the southern hemisphere, it is visible near the horizon in the north during winter, where it appears inverted.<br>Other asterisms include: The spring triangle, the winter hexagon and the northern cross.</p>
+    <div id='wrap'>
+        <img src='../media/content/cn_13.jpg' alt=''>
+        <a style='width: 23%;height: 7%;top: 61%;left: 37%;' title='Link to a page about the spring triangle' href="https://en.wikipedia.org/wiki/Spring_Triangle"><span>The Spring Triangle</span></a>
+        <a style='width: 23%;height: 7%;top: 69%;left: 37%;' title='Link to a page about the winter hexagon' href="https://en.wikipedia.org/wiki/Winter_Hexagon"><span>The Winter Hexagon</span></a>
+        <a style='width: 23%;height: 7%;top: 78%;left: 37%;' title='Link to a page about the northern cross' href="https://en.wikipedia.org/wiki/Northern_Cross_(asterism)"><span>The Northern Cross</span></a>
+        <p class='noprint'>In the northern hemisphere it is visible for most of the year but it is particularly evident in the summer, where it sits overhead around midnight.<br>In the spring it sits in the east early in the morning, and lies west in fall evenings.<br>In the southern hemisphere, it is visible near the horizon in the north during winter, where it appears inverted.<br>Other asterisms include: The spring triangle, the winter hexagon and the northern cross.</p>
+    </div>
     <img src='../media/content/cn_14.jpg' alt='an illustration featuring a gull and a rabbit, sitting on crates and talking while drinking something warm. The rabbit says that the brightest star in the sky is Sirius. The gull replies with See-ree-us? On the side are drawings of the two stars, sirus(1st!) and canopus(2nd!)'>
     <p class='noprint'></p>
 </main>
