--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <header>
     <nav>
     <ul>
-      <li><a href="boatswain_whistle.html">Boatswain's Call</a></li>
+      <li><a href="boatswain_call.html">Boatswain's Call</a></li>
+      <li><a href="celestial_compass.html">Celestial Compass</a></li>
       <li><a href="day_shapes.html">Day Shapes</a></li>
       <li><a href="emergency_bag.html">Emergency Bag</a></li>
       <li><a href="first_aid_kit.html">First-Aid Kit</a></li>
@@ -34,12 +35,14 @@
 <main>
   <div id='wrap'>
     <img src='media/content/rabbit_main.jpg' alt='Sailing in root vegetable-shaped sailboats on the ocean, the sailors are talking to each other via a series of flags. A turnip-shaped boat has an anthropomorphic rabbit sailor aboard, and a human, the other is too far to make out. The sailboat that is far away is signaling with the Quebec, Romeo and One flags. The turnip-shaped boat is flying the answering pennant.'>
+    <a style='width: 5%;height: 7%;top: 26%;left: 51%;' title='Link to a page about navigating with the stars' href="site/celestial_compass.html"><span>Celestial Compass</span></a>
     <a style='width: 6%;height: 20%;top: 28%;left: 19%;' title='Link to a page about signaling with flags' href="site/flags_maritime.html"><span>International Maritime Signal Flags</span></a>
     <a style='width: 7%;height: 13%;top: 66%;left: 50%;' title='Link to a page about emergency bags' href="site/emergency_bag.html"><span>Emergency Bag</span></a>
   </div>
   <img src='media/interface/title.png' class='maintitle' alt='Rabbit Waves'>
   <img src='media/interface/pages.jpg' alt='Pages:' class='title'>
   <a href="site/boatswain_call.html"><img src='media/interface/boatswain_call.jpg' title='Boatswains Call'></a>
+  <a href="site/celestial_compass.html"><img src='media/interface/celestial_compass.jpg' title='Celestial Compass'></a>
   <a href="site/day_shapes.html"><img src='media/interface/day_shapes.jpg' title='Day shapes'></a>
   <a href="site/emergency_bag.html"><img src='media/interface/emergency_bag.jpg' title='Emergency Bag'></a>
   <a href="site/first_aid_kit.html"><img src='media/interface/first_aid.jpg' title='First aid'></a>
