--- a/site/about.html
+++ b/site/about.html
@@ -20,7 +20,6 @@
 	<h1>About</h1>
 </header>
 <main>
-	<img src='../media/interface/links.jpg' alt='Links are indicated by words, or images, bordered with dotted lines'>
 	<h2>Support</h2>
 	<nav>
 		<ul>
@@ -31,6 +30,8 @@
 			<li><a href="https://liberapay.com/hundredrabbits/donate" target="_blank">Liberapay Support</a></li>
 		</ul>
 	</nav>
+	<img src="../media/interface/linkto.jpg"/>
+	<img src="../media/interface/button.png"/>
 	<h2>Support</h2>
 	<img src='../media/interface/support.jpg' alt='Support:' class='title'>
 	<div id='wrapsupport'>
@@ -57,6 +58,8 @@
 			<li><a href="triangular_bandage.html">Triangular Bandage</a></li>
 		</ul>
 	</nav>
+	<br>
+	<img src='../media/interface/links.jpg' alt='Links are indicated by words, or images, bordered with dotted lines'>
 	<img src='../media/interface/pages.jpg' alt='Pages:' class='title'>
 	<a href="boatswain_call.html"><img src='../media/interface/boatswain_call.jpg' title='Boatswains Call'></a>
 	<a href="celestial_compass.html"><img src='../media/interface/celestial_compass.jpg' title='Celestial Compass'></a>
